[package]
name = "libdragon-build"
description = "Tools to assist building libdragon-rs N64 programs"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
execute = "0.2"
glob = "0.3"
