[package]
name = "libdragon-sys"
version = "0.1.0"
edition = "2021"
description = "Raw FFI bindings to libdragon"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
include = [ "linker.ld", "toolchain/" ]
links = "libdragon-sys"
build = "build.rs"
rust-version.workspace = true

[build-dependencies]
bindgen = { version = "0.69", features = ["experimental"] }
execute = "0.2"
filetime = "0.2"
reqwest = "0.11"
tokio = { version = "1.36", features = ["full"] }
error-chain = "0.12"
tempfile = "3.10"
zip = "0.6"
doxygen-rs = "0.4"


[features]
default = []
buildtoolchain = []
