[package]
name = "libdragon-sys"
include = [ "linker.ld", "toolchain/" ]
links = "libdragon-sys"
build = "build.rs"
description = "Raw FFI bindings to libdragon"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies]
bindgen = { version = "0.69", features = ["experimental"] }
execute = "0.2"
filetime = "0.2"
reqwest = "0.11"
tokio = { version = "1.36", features = ["full"] }
error-chain = "0.12"
tempfile = "3.10"
zip = "0.6"
doxygen-rs = "0.4"


[features]
default = []
buildtoolchain = []
