[package]
name = "libdragon"
version = "0.1.0"
edition = "2021"
links = "libdragon"
build = "build.rs"
rust-version.workspace = true

[dependencies]
libdragon-sys = { path = "../libdragon-sys" }
cstr_core = "0.2.6"
typed-path = { version = "0.7", default-features = false }
embedded-io = "0.6.1"
paste = "1.0"
function_name = "0.3"
bitflags = "2.5.0"
