[package]
name = "libdragon"
links = "libdragon"
build = "build.rs"
description = "Rust bindings for the LibDragon C library for N64 development"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
libdragon-sys = { path = "../libdragon-sys" }
cstr_core = "0.2.6"
typed-path = { version = "0.7", default-features = false }
embedded-io = "0.6.1"
paste = "1.0"
function_name = "0.3"
bitflags = "2.5.0"
