[package]
name = "rdpqtest"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdragon = { path = "../../libdragon" }
rand_mt = { version = "4.2.2", default-features = false }
core_maths = "0.1.0"
