[package]
name = "test"
version = "0.1.0"
edition = "2021"
build = "build.rs"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdragon = { path = "../../libdragon" }

[build-dependencies]
libdragon-build = { path = "../../libdragon-build" }
